@@ -1,3 +1,7 @@
+1999-06-22  Stefan Monnier  <monnier@cs.yale.edu>
+
+	* sml-mode-startup.el: fixed to fulfill autoload.el assumptions.
+
 1999-06-21  Stefan Monnier  <monnier@cs.yale.edu>
 
 	* sml-defs.el (sml-bindings): removed bindings for TAB and M-C-\
